[workspace]
resolver = "3"
members = [
    "rt-client-rs",
    "rt-config-rs",
    "rt-core-rs",
    "rt-message-rs",
    "rt-server-rs",
    "rt-vis-rs/src-tauri",
]

[workspace.dependencies]
chrono = "0.4.41"
log = "0.4.27"
env_logger = "0.11.8"
rt-message = { path = "rt-message-rs" }
rt-core = { path = "rt-core-rs" }
rt-config = { path = "rt-config-rs" }
