[package]
name = "rt-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
rt-message.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version="0.62", features=["Win32_Media"] }
