[package]
name = "rt-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rt-config.workspace = true
rt-core.workspace = true
rt-message.workspace = true
serde.workspace = true
toml.workspace = true

ctrlc = "3.5.2"

[features]
perf-log = []
